create ArticlePreview view in blog
create ArticlPreview view in the blog views.py
use the AuthorAccessMixin in the ArticlPreview view
set the preview url for ArticlPreview view in blog urls.py
add preview page link for draft posts to the account home.html template

--- a/templates/registration/home.html
+++ b/templates/registration/home.html
@@ -40,6 +40,7 @@
                                   <a href="{% url "blog:detail" post.slug %}" target="blank" class="badge badge-primary">نمایش مقاله در سایت</a>
                               {% else %}
                                   <span class="badge badge-danger">پیش‌نویس</span>
+                                  <a href="{% url "blog:preview" post.pk %}" target="blank" class="badge badge-secondary">پیش‌نمایش</a>
                               {% endif %}
                           </td>
                           <td>
