add the is_special property to the account panel
add the is_special to the post fields in FieldsMixin
show the is_special field in post-create-update.html template
add new column for is_special in the account home.html template

--- a/templates/registration/home.html
+++ b/templates/registration/home.html
@@ -21,6 +21,7 @@
                   <th>نویسنده</th>
                   <th>خلاصه</th>
                   <th>زمان انتشار</th>
+                  <th>مقاله ویژه</th>
                   <th>وضعیت</th>
                   <th>عملیات</th>
                 </tr>
@@ -34,6 +35,13 @@
                           <td>{{post.author.get_full_name}}</td>
                           <td>{{post.description|striptags|truncatewords:25}}</td>
                           <td>{{post.jpublish}}</td>
+                          <td>
+                            {% if post.is_special %}
+                              <i class="fa fa-check-circle text-green"></i>
+                            {% else %}
+                              <i class="fa fa-minus-circle text-red"></i>
+                            {% endif %}
+                          </td>
                           <td>
                             <!--post statuses-->
 
