--- a/templates/registration/sidebar.html
+++ b/templates/registration/sidebar.html
@@ -51,12 +51,9 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a href="pages/widgets.html" class="nav-link">
+            <a href="{% url 'account:profile' %}" class="nav-link {% activate request 'profile' %}">
               <i class="nav-icon fas fa-th"></i>
-              <p>
-                Widgets
-                <span class="right badge badge-danger">New</span>
-              </p>
+              <p>پروفایل</p>
             </a>
           </li>
         </ul>
