--- a/templates/registration/sidebar.html
+++ b/templates/registration/sidebar.html
@@ -27,29 +27,33 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link active">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
-              <p>
-                مقالات
-                <i class="right fas fa-angle-left"></i>
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a href="{% url 'account:home' %}" class="nav-link {% activate request 'home' %}">
-                  <i class="fa fa-list nav-icon"></i>
-                  <p>لیست مقالات</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="{% url 'account:post-create' %}" class="nav-link {% activate request 'post-create' %}">
-                  <i class="fa fa-edit nav-icon"></i>
-                  <p>افزودن مقاله</p>
-                </a>
-              </li>
-            </ul>
-          </li>
+
+          {% if user.is_superuser or user.is_author%}
+          <!--articles navbar-->
+            <li class="nav-item has-treeview menu-open">
+              <a href="#" class="nav-link active">
+                <i class="nav-icon fas fa-tachometer-alt"></i>
+                <p>
+                  مقالات
+                  <i class="right fas fa-angle-left"></i>
+                </p>
+              </a>
+              <ul class="nav nav-treeview">
+                <li class="nav-item">
+                  <a href="{% url 'account:home' %}" class="nav-link {% activate request 'home' %}">
+                    <i class="fa fa-list nav-icon"></i>
+                    <p>لیست مقالات</p>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a href="{% url 'account:post-create' %}" class="nav-link {% activate request 'post-create' %}">
+                    <i class="fa fa-edit nav-icon"></i>
+                    <p>افزودن مقاله</p>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            {% endif %}
           <li class="nav-item">
             <a href="{% url 'account:profile' %}" class="nav-link {% activate request 'profile' %}">
               <i class="nav-icon fas fa-th"></i>
