--- a/templates/registration/post-create-update.html
+++ b/templates/registration/post-create-update.html
@@ -3,7 +3,11 @@
 {% load crispy_forms_tags %}
 
 {% block title %}{% block title-meta %}
-افزودن مقاله
+	{% if request.resolver_match.url_name == 'post-create' %}
+		افزودن مقاله
+	{% else %}
+		ویرایش مقاله
+	{% endif %}
 {% endblock title-meta %}{% endblock title %}
 
 {% block main %}
@@ -11,7 +15,13 @@
 <div class="col-md-12">
 	<div class="card card-primary">
 		<div class="card-header">
-			<h3 class="card-title mb-0 float-left">افزودن مقاله</h3>
+			<h3 class="card-title mb-0 float-left">
+				{% if request.resolver_match.url_name == 'post-create' %}
+					افزودن مقاله
+				{% else %}
+					ویرایش مقاله
+				{% endif %}
+			</h3>
 		</div>
 
 			<!-- form start -->
