create PasswordChange page view
add the PasswordChange view in the account view.py
set the urls for PasswordChange and PasswordChangeDone in urls.py
create the customize password change page in the template
link to the password change page in the profile page template

--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -41,6 +41,7 @@
 					</div>
 
 					<button type="submit" class="btn btn-success">ویرایش اطلاعات</button>
+					<a href="{% url 'account:password_change' %}" class="btn btn-danger">تغییر گذرواژه</a>
 
 				</form>
 			</div>
