move the auth urls to the root url
delete the auth urls from account/urls.py
include the auth urls to the root config/urls.py
change the login, logout, etc urls to the root pattern

--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -41,7 +41,7 @@
 					</div>
 
 					<button type="submit" class="btn btn-success">ویرایش اطلاعات</button>
-					<a href="{% url 'account:password_change' %}" class="btn btn-danger">تغییر گذرواژه</a>
+					<a href="{% url 'password_change' %}" class="btn btn-danger">تغییر گذرواژه</a>
 
 				</form>
 			</div>
