--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,150 +1,65 @@
-<!DOCTYPE html>
-{% load static %}
+{% extends 'registration/base_auth.html' %}
+
 {% load widget_tweaks %}
-<html lang="en">
-<head>
-	<title>ورود به حساب کاربری</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="{% static 'registration/login/images/icons/favicon.ico'%}"/>
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/vendor/bootstrap/css/bootstrap.min.css'%}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/fonts/font-awesome-4.7.0/css/font-awesome.min.css'%}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/fonts/iconic/css/material-design-iconic-font.min.css'%}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/vendor/animate/animate.css'%}">
-<!--===============================================================================================-->	
-	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/vendor/css-hamburgers/hamburgers.min.css'%}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/vendor/animsition/css/animsition.min.css'%}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/vendor/select2/select2.min.css'%}">
-<!--===============================================================================================-->	
-	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/vendor/daterangepicker/daterangepicker.css'%}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/css/util.css'%}">
-	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/css/main.css'%}">
-	<link rel="stylesheet" type="text/css" href="{% static 'registration/login/css/rtl.css'%}">
-<!--===============================================================================================-->
-</head>
-<body>
-	
-	<div class="limiter">
-		<div class="container-login100" style="background-image: url({% static "registration/login/'images/bg-01.jpg'"%});">
-			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-				<form class="login100-form validate-form" method="post">
-                    {% csrf_token %}
-					<span class="login100-form-title p-b-49 myfont">
-						ورود
-					</span>
 
-                    {% if form.non_field_errors %}
-                        <div class="errors m-b-20 fs-18">
-                           {% for error in form.non_field_errors %}
-                                <span>{{error}}</span>
-                           {% endfor %} 
-                        </div>
-                    {% endif %}
+{% block title %}ورود به حساب کاربری{% endblock title %}
 
-					<div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
-						<span class="label-input100 myfont">نام کاربری</span>
-                        {{ form.username|add_class:"input100" }}
-                        
-                        {% if form.username.errors %}
-                            <div class="errors m-b-20">
-                            {% for error in form.username.errors %}
-                                    <span>{{error}}</span>
-                            {% endfor %} 
-                            </div>
-                        {% endif %}
-						<span class="focus-input100" data-symbol="&#xf206;"></span>
+{% block main %}
+	<form class="login100-form validate-form" method="post">
+			{% csrf_token %}
+			<!--header title-->
+			<span class="login100-form-title p-b-49 myfont">ورود</span>
+			
+			<!--non-field errors-->
+			{% if form.non_field_errors %}
+					<div class="errors m-b-20 fs-18">
+					{% for error in form.non_field_errors %}
+									<span>{{error}}</span>
+					{% endfor %} 
 					</div>
-
-					<div class="wrap-input100 validate-input m-b-31" data-validate="Password is required">
-						<span class="label-input100 myfont">رمز عبور</span>
-                        {{ form.password|add_class:"input100" }}
-                        
-                        {% if form.password.errors %}
-                            <div class="errors m-b-20">
-                            {% for error in form.password.errors %}
-                                    <span>{{error}}</span>
-                            {% endfor %} 
-                            </div>
-                        {% endif %}
-						<span class="focus-input100" data-symbol="&#xf190;"></span>
-					</div>
-					
-					<!--div class="text-right p-t-8 p-b-31">
-						<a href="#">
-							فراموشی رمز عبور ؟
-						</a>
-					</div-->
-					
-					<div class="container-login100-form-btn myfont">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn">
-								ورود
-							</button>
-						</div>
-					</div>
-
-					<!--div class="txt1 text-center p-t-54 p-b-20">
-						<span>
-							Or Sign Up Using
-						</span>
-					</div>
-
-					<div class="flex-c-m">
-						<a href="#" class="login100-social-item bg1">
-							<i class="fa fa-facebook"></i>
-						</a>
-
-						<a href="#" class="login100-social-item bg2">
-							<i class="fa fa-twitter"></i>
-						</a>
-
-						<a href="#" class="login100-social-item bg3">
-							<i class="fa fa-google"></i>
-						</a>
-					</div>
-
-					<div class="flex-col-c p-t-155">
-						<span class="txt1 p-b-17">
-							Or Sign Up Using
-						</span>
-
-						<a href="#" class="txt2">
-							Sign Up
-						</a>
-					</div-->
-				</form>
+			{% endif %}
+				
+			<!--username input-->
+			<div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
+					<span class="label-input100 myfont">نام کاربری</span>
+					{{ form.username|add_class:"input100" }}
+					<!--username errors-->
+					{% if form.username.errors %}
+							<div class="errors m-b-20">
+								{% for error in form.username.errors %}
+									<span>{{error}}</span>
+								{% endfor %} 
+							</div>
+					{% endif %}
+					<span class="focus-input100" data-symbol="&#xf206;"></span>
 			</div>
-		</div>
-	</div>
-	
 
-	<div id="dropDownSelect1"></div>
-	
-<!--===============================================================================================-->
-	<script src="{% static 'registration/login/vendor/jquery/jquery-3.2.1.min.js'%}"></script>
-<!--===============================================================================================-->
-	<script src="{% static 'registration/login/vendor/animsition/js/animsition.min.js'%}"></script>
-<!--===============================================================================================-->
-	<script src="{% static 'registration/login/vendor/bootstrap/js/popper.js'%}"></script>
-	<script src="{% static 'registration/login/vendor/bootstrap/js/bootstrap.min.js'%}"></script>
-<!--===============================================================================================-->
-	<script src="{% static 'registration/login/vendor/select2/select2.min.js'%}"></script>
-<!--===============================================================================================-->
-	<script src="{% static 'registration/login/vendor/daterangepicker/moment.min.js'%}"></script>
-	<script src="{% static 'registration/login/vendor/daterangepicker/daterangepicker.js'%}"></script>
-<!--===============================================================================================-->
-	<script src="{% static 'registration/login/vendor/countdowntime/countdowntime.js'%}"></script>
-<!--===============================================================================================-->
-	<script src="{% static 'registration/login/js/main.js'%}"></script>
+			<!--password input-->
+			<div class="wrap-input100 validate-input" data-validate="Password is required">
+					<span class="label-input100 myfont">رمز عبور</span>
+					{{ form.password|add_class:"input100" }}
+					<!--password errors-->
+					{% if form.password.errors %}
+							<div class="errors m-b-20">
+							{% for error in form.password.errors %}
+											<span>{{error}}</span>
+							{% endfor %} 
+							</div>
+					{% endif %}
+					<span class="focus-input100" data-symbol="&#xf190;"></span>
+			</div>
+			
+			<!--forget password link-->
+			<div class="text-right p-t-8 p-b-31">
+					<a href="{% url 'password_reset' %}" class="myfont">فراموشی رمز عبور ؟</a>
+			</div>
+			<!--submit login button-->
+			<div class="container-login100-form-btn myfont">
+					<div class="wrap-login100-form-btn">
+							<div class="login100-form-bgbtn"></div>
+							<button class="login100-form-btn myfont">ورود</button>
+					</div>
+			</div>
+	</form>
 
-</body>
-</html>
+{% endblock main %}
