Create the Register feature
create SignUpForm in the account forms.py
create Register class view by the SignUpForm views.py
create activate view to active the account by the email link
create TokenGenerator to actiavte account by token in tokens.py
add django-utils-six package in the requirements.txt
set the register and activate urls in the config urls.py
create account_activation.html for activation email template
create register.html for register page template
add a link to the register page in the login.html template

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -43,6 +43,10 @@
 							<button class="login100-form-btn myfont">ورود</button>
 					</div>
 			</div>
+			<!--sign up link-->
+			<div class="text-right p-t-31">
+				حساب ندارید ؟ <a href="{% url 'register' %}" class="fs-18 myfont">ثبت نام</a>
+			</div>
 	</form>
 
 {% endblock main %}
