--- a/templates/registration/sidebar.html
+++ b/templates/registration/sidebar.html
@@ -18,7 +18,9 @@
           <img src="{% static 'registration/adminlte/assets/img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">{{user.get_full_name}}</a>
+          <a href="#" class="d-block">
+            {% firstof user.get_full_name user.username %}
+          </a>
         </div>
       </div>
 
