fix the static files path in the comment templates

--- a/templates/comment/bootstrap.html
+++ b/templates/comment/bootstrap.html
@@ -1,2 +1,2 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/bootstrap-4.1.1.css' %}">
+<link rel="stylesheet" href="{% static 'comment/css/bootstrap-4.1.1.css' %}">
