--- a/templates/comment/static.html
+++ b/templates/comment/static.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/comment.css' %}">
+<link rel="stylesheet" href="{% static 'comment/css/comment.css' %}">
 {% if is_translation_allowed %}
 <script type="text/javascript" src="{% url 'comment:javascript-catalog' %}"></script>
 {% else %}
@@ -8,4 +8,4 @@
     const gettext = str => str;
 </script>
 {% endif %}
-<script src="{% static 'js/comment.js' %}"></script>
+<script src="{% static 'comment/js/comment.js' %}"></script>
