--- a/templates/comment/comments/comment_content.html
+++ b/templates/comment/comments/comment_content.html
@@ -1,7 +1,7 @@
 {% load comment_tags %}
 {% load i18n %}
 
-<div id="{{ comment.urlhash }}" class="js-updated-comment {% if comment.has_flagged_state %}flagged-comment {% endif %}{% block content_wrapper_cls %}{% if has_valid_profile %}col-9 col-md-10{% else %}co-11 mx-3{% endif %}{% endblock content_wrapper_cls %}" >
+<div id="{{ comment.urlhash }}" class="media-comment-bubble left-top js-updated-comment {% if comment.has_flagged_state %}flagged-comment {% endif %}{% block content_wrapper_cls %}{% if has_valid_profile %}col-9 col-md-10{% else %}co-11 mx-3{% endif %}{% endblock content_wrapper_cls %}" >
     {% block comment_content %}
         {% if render_markdown %}
             {% render_content comment markdown=True %}
@@ -17,7 +17,7 @@
                 class="{% block username_cls %}{% endblock username_cls %}" {% if profile_url %}href="{{ profile_url }}"{% endif %}
                 title="{% if comment.user %}{% blocktrans %}view {{ username }} profile{% endblocktrans %}{% else %}{% trans 'comment by anonymous user' %}{% endif %}"
             >
-                {{ username }}
+                {% firstof comment.user.get_full_name username %}
             </{% if comment.user %}a{% else %}span{% endif %}> |
             {% if comment.is_edited %}
                 <span class="font-italic" title="{% trans 'Edited' %}">{% blocktrans with edited_time=comment.edited|timesince %}Edited: {{ edited_time }} ago{% endblocktrans %}</span>
