create star rating feature
install the star_ratings module
include star_ratings urls in the config/urls.py
load static files of star_ratings in base.html template
show rating of posts in the home list.html
how rating of post in the post detail page
config the star_ratings template in the widget.html

--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,5 +1,6 @@
 {% extends 'blog/base.html' %}
 {% load comment_tags %}
+{% load ratings %}
 
 {% block titile %} - {{object.title}}{% endblock %}
 
@@ -21,6 +22,7 @@
                                 {{object.jpublish}}
                             </span>
                         </div>
+                        <div class="mt-3">{% ratings object %}</div>
                     </div>
                 </div>
             </div>
