--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -18,6 +18,10 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'blog/css/styles.css' %}" rel="stylesheet" />
         <link href="{% static 'blog/css/rtl.css' %}" rel="stylesheet" />
+
+        <!-- star ratings -->
+        <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
+        <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
     </head>
     <body>
         <!-- Navigation-->
