--- a/templates/blog/list.html
+++ b/templates/blog/list.html
@@ -1,5 +1,6 @@
 {% extends 'blog/base.html' %}
 {% load static %}
+{% load ratings %}
 
 {% block main %}
 
@@ -32,6 +33,7 @@
                                     <span class="badge badge-danger fs-5">ویژه</span>
                                     {% endif %}
                                 </h2>
+                                <div class="mt-3">{% ratings post %}</div>
                                 <h3 class="post-subtitle">{{post.description|striptags|truncatewords:20 }}</h3>
                             </a>
                             <p class="post-meta">
