create view counter system
create new IPAddress model
make ManyToMany relation between the IPAddress and Post model
register the IPAddress model to the admin.py
create IPAddress middleware in the blog middleware.py
set the IPAddressMiddleware to the config settings.py
add ip_address of user to the post hits in the ArticleDetail view
display the post hits in the home and post detail pages template
make migrations

--- a/templates/blog/list.html
+++ b/templates/blog/list.html
@@ -41,10 +41,13 @@
                                 {{post.jpublish}}
                             </p>
                             <div>
+                                <span>دسته بندی : </span>
                                 {% for cat in post.category.active %}
                                     <a href="{% url 'blog:category' cat.slug %}">#{{cat.title}}</a>
                                 {% endfor %}
                             </div>
+
+                            <span class="fs-6">بازدیدها : {{post.hits.count}}</span>
                         </div>
                     {% endfor %}
                     <!-- Divider-->
