--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -23,6 +23,9 @@
                             </span>
                         </div>
                         <div class="mt-3">{% ratings object %}</div>
+                        <span class="mt-3 text-white">
+                            بازدید ها : {{ object.hits.count }}
+                        </span>
                     </div>
                 </div>
             </div>
