--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -17,7 +17,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" /> -->
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'blog/css/styles.css' %}" rel="stylesheet" />
-        <link href="{% static 'blog/css/rtl.css' %}" rel="stylesheet" />
+        <link href="{% static 'blog/css/custom.css' %}" rel="stylesheet" />
 
         <!-- star ratings -->
         <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
