--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,5 +1,6 @@
 {% extends 'blog/base.html' %}
 {% load comment_tags %}
+{% load base_tags %}
 {% load ratings %}
 
 {% block titile %} - {{object.title}}{% endblock %}
@@ -34,7 +35,8 @@
         <article class="mb-4">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7 text-justify">
+                    <div class="col-md-10 col-lg-8 col-xl-7 text-justify form-floating" style="min-height:180px;">
+                        {% popular_posts %}
                         <!--check special posts-->
                         {% if object.is_special %}
                             <!--check user premissions-->
