--- a/templates/blog/list.html
+++ b/templates/blog/list.html
@@ -1,5 +1,6 @@
 {% extends 'blog/base.html' %}
 {% load static %}
+{% load base_tags %}
 {% load ratings %}
 
 {% block main %}
@@ -21,8 +22,9 @@
         <!-- Main Content-->
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
+                <div class="col-md-10 col-lg-8 col-xl-7 form-floating">
                     {% block header %}{% endblock header %}
+                    {% popular_posts %}
                     <!-- Post preview-->
                     {% for post in object_list %}
                         <div class="post-preview">
