--- a/templates/blog/list.html
+++ b/templates/blog/list.html
@@ -24,7 +24,10 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7 form-floating">
                     {% block header %}{% endblock header %}
-                    {% popular_posts %}
+                    <aside>
+                        {% popular_posts %}
+                        {% hot_posts %}
+                    </aside>
                     <!-- Post preview-->
                     {% for post in object_list %}
                         <div class="post-preview">
