--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -36,7 +36,10 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7 text-justify form-floating" style="min-height:180px;">
-                        {% popular_posts %}
+                        <aside>
+                            {% popular_posts %}
+                            {% hot_posts %}
+                        </aside>
                         <!--check special posts-->
                         {% if object.is_special %}
                             <!--check user premissions-->
@@ -51,8 +54,10 @@
                         {% endif %}
                     </div>
 
-                    {% render_comments object request %}
-                    {% include_bootstrap %}
+                    <div class="col-md-12 col-lg-8 col-xl-7">
+                        {% render_comments object request %}
+                        {% include_bootstrap %}
+                    </div>
                 </div>
             </div>
         </article>
