create star posts of the month
add ratings property as a GenericRelation to the Post model
create custom star_posts template tag
display the star posts in the list.html and post_detail

--- a/templates/blog/list.html
+++ b/templates/blog/list.html
@@ -26,6 +26,7 @@
                     {% block header %}{% endblock header %}
                     <aside>
                         {% popular_posts %}
+                        {% star_posts %}
                         {% hot_posts %}
                     </aside>
                     <!-- Post preview-->
