--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -35,9 +35,10 @@
         <article class="mb-4">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7 text-justify form-floating" style="min-height:180px;">
+                    <div class="col-md-10 col-lg-8 col-xl-7 text-justify form-floating" style="min-height:350px;">
                         <aside>
                             {% popular_posts %}
+                            {% star_posts %}
                             {% hot_posts %}
                         </aside>
                         <!--check special posts-->
