--- a/templates/blog/list.html
+++ b/templates/blog/list.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load base_tags %}
 {% load ratings %}
+{% load humanize %}
 
 {% block main %}
 
@@ -44,7 +45,7 @@
                             </a>
                             <p class="post-meta">
                                 نوشته شده توسط : <a href="{% url 'blog:author' post.author.username %}">{{post.author.get_full_name}}</a> در
-                                {{post.jpublish}}
+                                {{post.publish|naturaltime}}
                             </p>
                             <div>
                                 <span>دسته بندی : </span>
