--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -2,6 +2,7 @@
 {% load comment_tags %}
 {% load base_tags %}
 {% load ratings %}
+{% load humanize %}
 
 {% block titile %} - {{object.title}}{% endblock %}
 
@@ -20,7 +21,7 @@
                                 {{object.author.get_full_name}}
                             </span>
                             <span class="meta mt-2">
-                                {{object.jpublish}}
+                                {{object.publish|naturaltime}}
                             </span>
                         </div>
                         <div class="mt-3">{% ratings object %}</div>
