feat: Add Category management to admin panel
feat: show category list to superuser panel
feat: add new categories in admin panel
fix: activation email send with template

--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>My Blog{% block titile %}{% endblock %}</title>
+        <title>وبلاگ من{% block titile %}{% endblock %}</title>
         <link rel="icon" type="image/x-icon" href="{% static 'blog/assets/favicon.ico' %}" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -29,7 +29,7 @@
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="{% url 'blog:home' %}">وبلاگ من</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
+                    منو
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
